@@ -8,6 +8,9 @@ Zope Changes
 
    Bugs fixed
 
+      - Launchpad #267545: DateTime(DateTime()) now preserves the
+        correct hour
+
       - Launchpad #245649:  the Products package is now a proper
         "namespace package" under the rules specified by setuptools.
 
